data/derived/comb/progs/unify/prog8503.ml.out
Characters 42-49:
  bigAdd (List.map (l*i l)) [];;
                   ^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a -> 'b
